discussion/kv_engine/142092/142092_rev46_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Store the TLS properties in the NIM [2.1/3]

Move the TLS properties from the Settings class over to the
network interface manager.

Change-Id: If49a35e0be061fa50f2da67c01f7af74248559ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-15 05:18:00.000000000
Message: 
Uploaded patch set 46: Patch Set 45 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 06:58:58.000000000
Message: 
Patch Set 46: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31500/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.h:55:19:
error: no member named "mcbp" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31500/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9878/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:55:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doTlsReconfigure(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:57:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doDefineInterface(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:59:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doDeleteInterface(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:61:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doListInterface();
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:63:5: error: unknown type name "uniqueSslPtr" [clang-diagnostic-error]
    uniqueSslPtr createClientSslHandle();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9878/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:55:19:
error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9878/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11876/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11876/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8468/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36871/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10530/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11449/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11602/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19464/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
